# toy-dataset

./: README.md  pyproject.toml
src/toy_dataset/: __init__.py  dataset.py  test.py
