[project]
dependencies = ["torch==2.4.1+cpu", "torchvision==0.19.1+cpu"]
name = "toy-dataset"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Stefan Küpper", email = "stefan.kuepper@posteo.de" }]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/toy_dataset"]

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"

[tool.pyright]
venvPath = "."
venv = ".venv"
